--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,19 @@
 			<artifactId>commons-pool</artifactId>
 			<version>1.5.4</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code</groupId>
+			<artifactId>morphia</artifactId>
+			<version>0.91</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
